@@ -4,7 +4,11 @@ Changelog
 1.2.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added support for forward as well as reverse wildcard search.
+  This is done by providing two additional dynamic variables in the search pattern,
+  value_lwc and value_twc that have leading respectively trailing wildcards appended
+  to each of the search terms.
+  [lgraf]
 
 
 1.2.2 (2013-09-24)
